# scholarly_website_backend

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  manage.py  nixpacks.toml  pyproject.toml  requirements.txt  start.sh  sync-schema.js
api/: tasks.py  urls.py  views.py
api/rag/: chatbot.py
scholarly_website_backend/: asgi.py  settings.py  wsgi.py
scripts/: process_pdf_to_pinecone.py
templates/emails/: contact-us-response.html
